# HILARy

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  MANIFEST.in  README.md  a_posteriori.py  a_priori.py  aposteriori.py  apriori.py  compatible.py  inference.ipynb  inference.py  pyproject.toml  setup.py  test_partis.ipynb  truncated_normal_fit.ipynb  tutorial.ipynb  utils.py
benchmark/: README.md
benchmark/figure_scripts/: figure4_partis.ipynb
benchmark/partis_dataset/: README.md  get_single_chain_partis.sh  simu_to_hilary.json
benchmark_data/: README.md  get_both_chains_partis.sh  get_both_chains_scoper.sh  get_both_chains_simulations.sh  get_single_chain_hilary.sh  get_single_chain_scoper.sh  get_single_chain_simulations.sh
data/: README.md
data/benchmark/: README.md
data/benchmark_on_partis_dataset/: get_single_chain_hilary.sh
data/benchmark_on_synthetic_dataset/results_hilary/set1/logs/: logs_18.json  logs_21.json  logs_24.json  logs_27.json  logs_30.json  logs_33.json  logs_36.json  logs_39.json  logs_42.json  logs_45.json
data/benchmark_on_synthetic_dataset/results_hilary/set2/logs/: logs_18.json  logs_21.json  logs_24.json  logs_27.json  logs_30.json  logs_33.json  logs_36.json  logs_39.json  logs_42.json  logs_45.json
data/benchmark_on_synthetic_dataset/results_hilary/set3/logs/: logs_18.json  logs_21.json  logs_24.json  logs_27.json  logs_30.json  logs_33.json  logs_36.json  logs_39.json  logs_42.json  logs_45.json
data/benchmark_on_synthetic_dataset/results_hilary/set4/logs/: logs_18.json
data/benchmark_on_synthetic_dataset/results_hilary_p99/set1/logs/: logs_18.json  logs_21.json  logs_24.json  logs_27.json  logs_30.json  logs_33.json  logs_36.json  logs_39.json  logs_42.json  logs_45.json
data/benchmark_on_synthetic_dataset/results_hilary_p99/set2/logs/: logs_18.json  logs_21.json  logs_24.json  logs_27.json  logs_30.json  logs_33.json  logs_36.json  logs_39.json  logs_42.json  logs_45.json
data/benchmark_on_synthetic_dataset/results_hilary_p99/set3/logs/: logs_18.json  logs_21.json  logs_24.json  logs_27.json  logs_30.json  logs_33.json  logs_36.json  logs_39.json  logs_42.json  logs_45.json
data/benchmark_on_synthetic_dataset/results_hilary_p99/set4/logs/: logs_18.json  logs_21.json  logs_24.json  logs_27.json  logs_30.json  logs_33.json  logs_36.json  logs_39.json  logs_42.json  logs_45.json
data/benchmark_on_synthetic_dataset/results_hilary_p99/set5/logs/: logs_18.json  logs_21.json  logs_24.json  logs_27.json  logs_30.json  logs_33.json  logs_36.json  logs_39.json  logs_42.json  logs_45.json
data/benchmark_on_synthetic_dataset/scripts/: get_single_chain_hilary.sh
data/benchmark_on_synthetic_dataset/scripts/alignment_free/: run_alignment_free_synthetic_data.py  write_slurm_commands_synthetic_data.py
data/benchmark_on_synthetic_dataset/subsampled_simulations/: simu_to_hilary.json
data/briney_dataset/: new_plot-stats.ipynb
data/null_distributions/: cdfs_326651.csv  cdfs_326713.csv  cdfs_paired_post_50K.csv
data_with_scripts/: README.md
data_with_scripts/article_figure_scripts/: figure4.ipynb  figure4_partis_both.ipynb  figure4_partis_cdr.ipynb  figure4_synth_cdr.ipynb  figure5.ipynb  figure5_cdrl.ipynb  figure5_shm.ipynb  figure6.ipynb  figure7.ipynb  figureSI_standard_cdrl.ipynb  figureSI_standard_shm .ipynb  figure_SI_partis_shm.ipynb  figure_SI_shm_both.ipynb  si_figure10.ipynb  si_figure11.ipynb  si_figure12.ipynb  si_figure9.ipynb
data_with_scripts/benchmark_on_partis_dataset/: simu_to_hilary.json
data_with_scripts/benchmark_on_partis_dataset/scripts/: get_both_chains_hilary-CDR3.sh  get_both_chains_hilary-full.sh  get_single_chain_hilary-CDR3.sh  get_single_chain_hilary-full.sh  run_crude_method.sh
data_with_scripts/benchmark_on_synthetic_dataset/VJCDR3-0.12/set1/logs/: logs_15.json  logs_18.json  logs_21.json  logs_24.json  logs_27.json  logs_30.json  logs_33.json  logs_36.json  logs_39.json  logs_42.json  logs_45.json
data_with_scripts/benchmark_on_synthetic_dataset/VJCDR3-0.12/set2/logs/: logs_15.json  logs_18.json  logs_21.json  logs_24.json  logs_27.json  logs_30.json  logs_33.json  logs_36.json  logs_39.json  logs_42.json  logs_45.json
data_with_scripts/benchmark_on_synthetic_dataset/VJCDR3-0.12/set3/logs/: logs_15.json  logs_18.json  logs_21.json  logs_24.json  logs_27.json  logs_30.json  logs_33.json  logs_36.json  logs_39.json  logs_42.json  logs_45.json
data_with_scripts/benchmark_on_synthetic_dataset/scripts/: get_single_chain_hilary-CDR3.sh  get_single_chain_hilary-full.sh
data_with_scripts/benchmark_on_synthetic_dataset/scripts/af/: commands_af.txt  run_alignment_free_synthetic_data.py  slurm_af.sh  write_slurm_commands_af.py
data_with_scripts/benchmark_on_synthetic_dataset/scripts/alignment_free/: commands_synthetic.txt  core.py  slurm.sh
data_with_scripts/benchmark_on_synthetic_dataset/scripts/fixed-threshold/: get_crude_method_clusters.sh
data_with_scripts/benchmark_on_synthetic_dataset/scripts/partis/: partis_sbatch.slurm  process_yaml.ipynb  tmp_script.py
data_with_scripts/benchmark_on_synthetic_dataset/scripts/scoper/: scoper_run .R
data_with_scripts/benchmark_on_synthetic_dataset/subsampled_simulations/: simu_to_hilary.json
data_with_scripts/data_from_briney/: figure5.ipynb
data_with_scripts/human_genes/: IGHV.fasta
figure_scripts/: figure_SI_shm_both.ipynb  figure_SI_shm_single.ipynb
hilary/: __init__.py  __main__.py  apriori.py  cdfs_human_jl.csv  cdfs_paired.csv  expectmax.py  inference.py  utils.py
hilary/cdfs/: cdfs_326651.csv  cdfs_326651.parquet  cdfs_326713.csv  cdfs_326713.parquet  cdfs_human_jl.parquet  cdfs_human_vjl.parquet  cdfs_mouse_jl.csv  cdfs_mouse_jl.parquet  cdfs_mouse_vjl.csv  cdfs_mouse_vjl.parquet  cdfs_paired.csv  cdfs_paired.parquet  cdfs_paired_post_50K.csv  cdfs_paired_post_50K.parquet  mouse_ogrdb2imgt.csv
hilary/tests/: test_on_data.py
misc/: mixcrExportForHILARy
(+241 files in other folders)
